--- a/bitclick.html
+++ b/bitclick.html
@@ -1,2 +1,2 @@
-<META HTTP-EQUIV="refresh" content="0;http://conquest.site/r.php?t=c&d=0&l=1&c=0&cr=2914">
-<script type='text/javascript'>document.location.href='http://conquest.site/r.php?t=c&d=0&l=1&c=0&cr=2914';</script>
+<META HTTP-EQUIV="refresh" content="0;http://owl.li/AKek30oO92l">
+<script type='text/javascript'>document.location.href='http://owl.li/AKek30oO92l';</script>
